--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,12 @@
 ---
-layout: default
+layout: minimal
+site.search_enabled: false
 ---
+<div class="logo">
+    <a href="{{ site.baseurl | default: '/' }}">
+        <img src="{{ '/assets/images/Zynapte.png' | relative_url }}" alt="{{ site.title }}" class="logo-image">
+    </a>
+</div>
+<div class="home-search-box">
+    {% include components/search_header.html %}
+</div>
