--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,6 @@
 ---
 layout: minimal
-site.search_enabled: false
+search_enabled: false
 ---
 <div class="logo">
     <a href="{{ site.baseurl | default: '/' }}">
