--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,10 @@
 ---
-layout: table_wrappers
+layout: minimal
 ---
 
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: 'en-US' }}">
-{% include head.html %}
 <body>
-    <a class="skip-to-main" href="#main-content">Skip to main content</a>
     <div class="main" id="top">
         <div class="main-content-wrap">
             <div id="main-content" class="main-content">
@@ -17,15 +15,9 @@ layout: table_wrappers
                                 alt="{{ site.title }}" class="logo-image">
                         </a>
                     </div>
-                    <div class="home-search-box">
-                        {% include components/search_header.html %}
-                        {% include components/search_footer.html %}
-                    </div>
                 </main>
-
             </div>
         </div>
     </div>
 </body>
-
 </html>
