--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,1 +1,1 @@
-<a href="/terms-of-use.html">Terms of Use</a> | <a href="/about.html">About</a>
+Made with ❤️ at <a href='https://www.zynapte.com'>Zynapte</a> | <a href="/terms-of-use.html">Terms of Use</a> | <a href="/about.html">About</a>
